re BLET-44 just a bunch of warning elimination from SonarCloud