@@ -1,5 +1,7 @@
 package net.lshift.spki.convert;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * Create a converter by instantiating the class in the annotation.
  */
@@ -9,11 +11,14 @@ public class ConvertClassFactory implements ConverterFactory<Convert.ConvertClas
     public <T> Converter<T> converter(final Class<T> c, final Convert.ConvertClass a) {
         final Class<?> t = a.value();
         try {
-            return (Converter<T>) t.newInstance();
-        } catch (final InstantiationException e) {
+            return (Converter<T>) t.getDeclaredConstructor().newInstance();
+        } catch (final InstantiationException |
+        		IllegalAccessException |
+        		NoSuchMethodException |
+        		IllegalArgumentException | 
+        		InvocationTargetException | 
+        		SecurityException e) {
             throw new ConvertReflectionException(c, e);
-        } catch (final IllegalAccessException e) {
-            throw new ConvertReflectionException(c, e);
-        }
+		}
     }
 }
